--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <fragment
         android:name="androidx.navigation.fragment.NavHostFragment"
