--- a/app/src/main/res/navigation/navigation_mobile.xml
+++ b/app/src/main/res/navigation/navigation_mobile.xml
@@ -15,4 +15,9 @@
         android:name="kg.example.lovecalculator.fragments.ResutFragment"
         android:label="TestFragment2"
         tools:layout="@layout/fragment_test2" />
+    <fragment
+        android:id="@+id/boardFragment"
+        android:name="kg.example.lovecalculator.board.BoardFragment"
+        android:label="fragment_board"
+        tools:layout="@layout/fragment_board" />
 </navigation>
